--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -63,7 +63,7 @@
 		</dict>
 		<dict>
 			<key>begin</key>
-			<string>(&lt;!)(DOCTYPE)</string>
+			<string>(&lt;!)(DOCTYPE)\s+([:a-zA-Z_][:a-zA-Z0-9_.-]*)</string>
 			<key>captures</key>
 			<dict>
 				<key>1</key>
@@ -76,16 +76,25 @@
 					<key>name</key>
 					<string>entity.name.tag.doctype.xml</string>
 				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>meta.document.root</string>
+				</dict>
 			</dict>
 			<key>end</key>
-			<string>(&gt;)</string>
+			<string>\s*(&gt;)</string>
 			<key>name</key>
 			<string>meta.tag.sgml.doctype.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
+					<key>include</key>
+					<string>#internalSubset</string>
+				</dict>
+				<dict>
 					<key>begin</key>
-					<string>(&lt;!)(ENTITY)\s([-_a-zA-Z0-9]+)</string>
+					<string>(&lt;!)(ENTITY)\s+([:a-zA-Z_][:a-zA-Z0-9_.-]*)</string>
 					<key>captures</key>
 					<dict>
 						<key>1</key>
@@ -421,6 +430,23 @@
 			<string>(&amp;)([:a-zA-Z_][:a-zA-Z0-9_.-]*|#[0-9]+|#x[0-9a-fA-F]+)(;)</string>
 			<key>name</key>
 			<string>constant.character.entity.xml</string>
+		</dict>
+		<key>internalSubset</key>
+		<dict>
+			<key>begin</key>
+			<string>(\[)</string>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.constant.xml</string>
+				</dict>
+			</dict>
+			<key>end</key>
+			<string>(\])</string>
+			<key>name</key>
+			<string>meta.internalsubset.xml</string>
 		</dict>
 		<key>singlequotedString</key>
 		<dict>
