--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -434,7 +434,7 @@
 		<key>internalSubset</key>
 		<dict>
 			<key>begin</key>
-			<string>(\[)</string>
+			<string>(\[)\s*</string>
 			<key>captures</key>
 			<dict>
 				<key>1</key>
@@ -444,9 +444,36 @@
 				</dict>
 			</dict>
 			<key>end</key>
-			<string>(\])</string>
+			<string>\s*(\])</string>
 			<key>name</key>
 			<string>meta.internalsubset.xml</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>include</key>
+					<string>#parameterEntity</string>
+				</dict>
+			</array>
+		</dict>
+		<key>parameterEntity</key>
+		<dict>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.constant.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.constant.xml</string>
+				</dict>
+			</dict>
+			<key>match</key>
+			<string>(%)([:a-zA-Z_][:a-zA-Z0-9_.-]*)(;)</string>
+			<key>name</key>
+			<string>constant.character.parameter-entity.xml</string>
 		</dict>
 		<key>singlequotedString</key>
 		<dict>
