--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -74,12 +74,12 @@
 				<key>2</key>
 				<dict>
 					<key>name</key>
-					<string>entity.name.tag.doctype.xml</string>
+					<string>keyword.doctype.xml</string>
 				</dict>
 				<key>3</key>
 				<dict>
 					<key>name</key>
-					<string>meta.document.root</string>
+					<string>variable.documentroot.xml</string>
 				</dict>
 			</dict>
 			<key>end</key>
@@ -91,41 +91,6 @@
 				<dict>
 					<key>include</key>
 					<string>#internalSubset</string>
-				</dict>
-				<dict>
-					<key>begin</key>
-					<string>(&lt;!)(ENTITY)\s+([:a-zA-Z_][:a-zA-Z0-9_.-]*)</string>
-					<key>captures</key>
-					<dict>
-						<key>1</key>
-						<dict>
-							<key>name</key>
-							<string>punctuation.definition.tag.xml</string>
-						</dict>
-						<key>2</key>
-						<dict>
-							<key>name</key>
-							<string>entity.name.tag.entity.xml</string>
-						</dict>
-						<key>3</key>
-						<dict>
-							<key>name</key>
-							<string>meta.entity.xml</string>
-						</dict>
-					</dict>
-					<key>end</key>
-					<string>(&gt;)</string>
-					<key>patterns</key>
-					<array>
-						<dict>
-							<key>include</key>
-							<string>#doublequotedString</string>
-						</dict>
-						<dict>
-							<key>include</key>
-							<string>#singlequotedString</string>
-						</dict>
-					</array>
 				</dict>
 			</array>
 		</dict>
@@ -368,6 +333,42 @@
 	</array>
 	<key>repository</key>
 	<dict>
+		<key>EntityDecl</key>
+		<dict>
+			<key>begin</key>
+			<string>(&lt;!)(ENTITY)\s+([:a-zA-Z_][:a-zA-Z0-9_.-]*)</string>
+			<key>captures</key>
+			<dict>
+				<key>1</key>
+				<dict>
+					<key>name</key>
+					<string>punctuation.definition.tag.xml</string>
+				</dict>
+				<key>2</key>
+				<dict>
+					<key>name</key>
+					<string>keyword.entity.xml</string>
+				</dict>
+				<key>3</key>
+				<dict>
+					<key>name</key>
+					<string>variable.entity.xml</string>
+				</dict>
+			</dict>
+			<key>end</key>
+			<string>(&gt;)</string>
+			<key>patterns</key>
+			<array>
+				<dict>
+					<key>include</key>
+					<string>#doublequotedString</string>
+				</dict>
+				<dict>
+					<key>include</key>
+					<string>#singlequotedString</string>
+				</dict>
+			</array>
+		</dict>
 		<key>bare-ampersand</key>
 		<dict>
 			<key>match</key>
@@ -434,7 +435,7 @@
 		<key>internalSubset</key>
 		<dict>
 			<key>begin</key>
-			<string>(\[)\s*</string>
+			<string>(\[)</string>
 			<key>captures</key>
 			<dict>
 				<key>1</key>
@@ -444,11 +445,15 @@
 				</dict>
 			</dict>
 			<key>end</key>
-			<string>\s*(\])</string>
+			<string>(\])</string>
 			<key>name</key>
 			<string>meta.internalsubset.xml</string>
 			<key>patterns</key>
 			<array>
+				<dict>
+					<key>include</key>
+					<string>#EntityDecl</string>
+				</dict>
 				<dict>
 					<key>include</key>
 					<string>#parameterEntity</string>
