--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -336,7 +336,7 @@
 		<key>EntityDecl</key>
 		<dict>
 			<key>begin</key>
-			<string>(&lt;!)(ENTITY)\s+([:a-zA-Z_][:a-zA-Z0-9_.-]*)</string>
+			<string>(&lt;!)(ENTITY)\s+(%\s+)?([:a-zA-Z_][:a-zA-Z0-9_.-]*)(\s+(?:SYSTEM|PUBLIC)\s+)?</string>
 			<key>captures</key>
 			<dict>
 				<key>1</key>
@@ -352,7 +352,17 @@
 				<key>3</key>
 				<dict>
 					<key>name</key>
+					<string>punctuation.definition.entity.xml</string>
+				</dict>
+				<key>4</key>
+				<dict>
+					<key>name</key>
 					<string>variable.entity.xml</string>
+				</dict>
+				<key>5</key>
+				<dict>
+					<key>name</key>
+					<string>keyword.entitytype.xml</string>
 				</dict>
 			</dict>
 			<key>end</key>
