Add .xsd extension for XML grammar (XML Schema).

--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -5,6 +5,7 @@
 	<key>fileTypes</key>
 	<array>
 		<string>xml</string>
+		<string>xsd</string>
 		<string>tld</string>
 		<string>jsp</string>
 		<string>pt</string>
