--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -13,6 +13,7 @@
 		<string>dtml</string>
 		<string>rss</string>
 		<string>opml</string>
+		<string>bes</string>
 	</array>
 	<key>keyEquivalent</key>
 	<string>^~X</string>
