--- a/Syntaxes/XML.plist
+++ b/Syntaxes/XML.plist
@@ -39,7 +39,7 @@
 			<key>end</key>
 			<string>(\?&gt;)</string>
 			<key>name</key>
-			<string>meta.tag.preprocessor.xml</string>
+			<string>meta.tag.metadata.processing.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
@@ -82,7 +82,7 @@
 			<key>end</key>
 			<string>\s*(&gt;)</string>
 			<key>name</key>
-			<string>meta.tag.sgml.doctype.xml</string>
+			<string>meta.tag.metadata.doctype.xml</string>
 			<key>patterns</key>
 			<array>
 				<dict>
